# aoc_2023_rust

./: .gitignore  Cargo.toml  README.md
data/d03/: main_part.txt
src/: lib.rs  main.rs
src/d01/: mod.rs
src/d01/part1/: mod.rs
src/d01/part2/: mod.rs
src/d02/: mod.rs
src/d02/part1/: mod.rs
src/d02/part2/: mod.rs
src/d02/shared/: mod.rs
src/d03/: mod.rs
src/d03/part1/: mod.rs
src/d03/part2/: mod.rs
src/d03/shared/: mod.rs
src/d04/: mod.rs
src/d04/part1/: mod.rs
src/d04/part2/: mod.rs
src/d04/shared/: mod.rs
src/d05/: mod.rs
src/d05/part1/: mod.rs
src/d05/part2/: mod.rs
src/d05/part2/split_range/: mod.rs
src/d05/shared/: mod.rs
src/d06/: mod.rs
src/d06/part1/: mod.rs
src/d06/part2/: mod.rs
src/d06/shared/: mod.rs
src/utils/iteration/: mod.rs
tests/: d01_test.rs
