[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"
authors = ["aadmaa"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
enum-display-derive = "0.1.1"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
